--- a/.example.env
+++ b/.example.env
@@ -1,4 +1,5 @@
-MAIL_USER=
-MAIL_PASSWORD=
-MAIL_HOST=
-MAIL_SERVER_ADDR=
+MAIL_USER=mail_user
+MAIL_PASSWORD=mail_password
+MAIL_HOST=smtp.gmail.com
+MAIL_SERVER_ADDR=smtp.gmail.com:587
+MAIL_SERVER_PORT=587
